# text-classification

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
datasets/sentiment-analysis/: test.csv  test.jsonl  test.txt  train.csv  train.jsonl  train.txt  validation.csv  validation.jsonl  validation.txt
notebooks/datasets/: Inspection.ipynb  Loading.ipynb
notebooks/image-classification/: Image Classification.ipynb  dataset.py  training.py
notebooks/maksed-lm/: MaskedLM.ipynb
notebooks/models/: Model Embeddings.ipynb  Model Training.ipynb
notebooks/object-detection/: Object Detection.ipynb  dataset.py  evaluation.py  export_onnx.py  inference.py  inference_onnx.py  training.py
notebooks/performance/: Optimization.ipynb  benchmark.py  training.py
notebooks/text-generation/: Text Generation.ipynb
notebooks/text-summarization/: Text Summarization.ipynb
notebooks/token-classification/: NER Model.ipynb  NER Tokenizers.ipynb  NER Training.ipynb
notebooks/tokenization/: Dataset Tokenization.ipynb  Tokenizers.ipynb
